template driven form

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,5 +1,5 @@
 <h2> Product Component </h2>
-Date:{{dt}} <br>
+<!--Date:{{dt}} <br>
 Date:{{dt|date:'shortDate'}} <br>
 Date:{{dt|date:'longDate'}} <br>
 Date:{{dt|date:'fullDate'}} <br>
@@ -7,6 +7,9 @@ Short Time:{{dt|date:'shortTime'}} <br>
 Long Time:{{dt|date:'longTime'}} <br>
 Custom Date:{{dt|date:'dd-MM-yyyy hh:mm'}}
 <button (click)="toggleshow()">Click</button>
+-->
+<a [routerLink]="['/prodnew']" class="btnb btn-danger"> New Product </a>
+
 <table class="table table-striped">
     <thead>
         <tr>
