Template validation and reactive form creation

--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,4 +1,7 @@
 <h2> Customer List </h2>
+<hr>
+<a [routerLink]="['/custnew']" class="btn btn-info"> New Customer </a>
+<hr>
 <table class="table table-bordered">
     <thead>
         <tr>
