--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -11,6 +11,7 @@
             <th> Email ID </th>
             <th> Mobile No  </th>
             <th> Credit Limit </th>
+            <th> Actions </th>
         </tr>
     </thead>
     <tbody>
@@ -21,6 +22,9 @@
                <td>{{temp.emailID}}</td>
                <td>{{temp.mobileNo}}</td>
                <td>{{temp.creditLimit|custcategory}}</td>
+               <td>
+                  <a [routerLink]="['/custedit',temp.customerID]" class="btn btn-primary"> Edit </a>
+               </td>
         </tr>
     </tbody>
 </table>
