--- a/src/app/dir/attrdir.component.html
+++ b/src/app/dir/attrdir.component.html
@@ -1,4 +1,4 @@
-<h2> Attribute Directives</h2>
+<h2 appHighLight> Attribute Directives</h2>
 <h1 [ngStyle]="{'background-color':'orange','color':'white'}
 "> First Heading</h1>
 
