--- a/src/app/dir/dir.component.html
+++ b/src/app/dir/dir.component.html
@@ -1,4 +1,4 @@
-<h2> Directives </h2>
+<h2 appHighLight> Directives </h2>
 
 <h2> Ng If Then Else </h2>
 <span *ngIf="flag;then db;else el;"></span>
