--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<h2> Product Component </h2>
+<h2 appHighLight> Product Component </h2>
 <!--Date:{{dt}} <br>
 Date:{{dt|date:'shortDate'}} <br>
 Date:{{dt|date:'longDate'}} <br>
