--- a/src/app/customer/customeredit.component.html
+++ b/src/app/customer/customeredit.component.html
@@ -1,5 +1,6 @@
 <h3> Edit Customer </h3>
 <form [formGroup]="cfrm" (ngSubmit)="EditCustomer()">
+    <input type="hidden" formControlName="customerID" />
     <div class="form-group">
         <label>Customer Name:</label>
         <div class="col-md-5">
